--- a/himalaya-project/package.json
+++ b/himalaya-project/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "firebase": "^9.8.3",
     "framer-motion": "^6.3.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
