--- a/himalaya-project/package.json
+++ b/himalaya-project/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
